Inconsistency with 0 and Del hotkeys #29155

Closed
opened 2011-11-04 14:38:32 +01:00 by Mikhail Rachinskiy · 5 comments

%%%Hi!
Last patch switch 0 hotkey behavior to Del hotkey, almost all is ok, but when I open color picker and try to reset color value in the color picker (the color circle) or value picker (right side from color picker located thing) - Del key is not working, but 0 is OK.
So can you change in this case 0 functionality to Del hotkey?
Thanks!

Platform:


Windows 7 Home Premium x32

OpenGL:


  • Renderer: ATI Radeon HD 4770
  • Vendor: ATI Technologies Inc.
  • Version: 3.3.11005 Compatibility Profile Context

Blender:


Version: 2.60 (sub 0)
Revision: 41503%%%

%%%Hi! Last patch switch 0 hotkey behavior to Del hotkey, almost all is ok, but when I open color picker and try to reset color value in the color picker (the color circle) or value picker (right side from color picker located thing) - Del key is not working, but 0 is OK. So can you change in this case 0 functionality to Del hotkey? Thanks! Platform: **** Windows 7 Home Premium x32 OpenGL: **** - Renderer: ATI Radeon HD 4770 - Vendor: ATI Technologies Inc. - Version: 3.3.11005 Compatibility Profile Context Blender: **** Version: 2.60 (sub 0) Revision: 41503%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Attaching patch for it, but prefer to have ui team feedback about this change.%%%

%%%Attaching patch for it, but prefer to have ui team feedback about this change.%%%

%%%Fixed in rev41527. Thanks for the report, closing.%%%

%%%Fixed in rev41527. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%Thanks!%%%

%%%Thanks!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29155
No description provided.