Fix #29155: Inconsistency with 0 and Del hotkeys

Use del key to reset values in widgets like color selection and histogram.